fix CSS sentence overlap

--- a/src/components/assets/style.css
+++ b/src/components/assets/style.css
@@ -409,6 +409,7 @@
 }
 .control-hardware {
   position: fixed;
+  z-index: 1;;
   width: 100%;
   height: 60vh;
   display: flex;
